--- a/SECB/app/src/main/res/layout/organizer_details.xml
+++ b/SECB/app/src/main/res/layout/organizer_details.xml
@@ -44,7 +44,7 @@
                 android:layout_marginBottom="@dimen/organizer_details_margin_small"
                 android:layout_marginLeft="@dimen/organizer_details_margin"
                 android:layout_marginRight="@dimen/organizer_details_margin"
-                android:text="@string/email_address"
+                android:text="@string/hint_name"
                 android:textColor="@color/secb_dark_text" />
 
             <TextView
