--- a/SECB/app/src/main/res/layout-ar/contact_us.xml
+++ b/SECB/app/src/main/res/layout-ar/contact_us.xml
@@ -168,7 +168,7 @@
                 android:drawableRight="@drawable/user_shape_icon"
                 android:textSize="@dimen/contact_us_text_us"
                 android:hint="@string/hint_name"
-
+                android:background="@null"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:textColor="@color/secb_dark_text"
                 android:layout_weight="1"
@@ -187,7 +187,7 @@
                 android:textSize="@dimen/contact_us_text_us"
                 android:hint="@string/hint_mobile"
                 android:textColor="@color/secb_dark_text"
-
+                android:background="@null"
                 android:gravity="right"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
                 android:layout_weight="1"/>
@@ -202,7 +202,7 @@
                 android:layout_height="wrap_content"
                 android:drawableRight="@drawable/organization_icon"
                 android:textSize="@dimen/contact_us_text_us"
-
+                android:background="@null"
                 android:gravity="right"
                 android:hint="@string/hint_organization"
                 android:textColor="@color/secb_dark_text"
@@ -220,7 +220,7 @@
                 android:drawableRight="@drawable/email_icon"
                 android:textSize="@dimen/contact_us_text_us"
                 android:hint="@string/email_address"
-
+                android:background="@null"
                 android:gravity="right"
                 android:textColor="@color/secb_dark_text"
                 android:drawablePadding="@dimen/contact_us_text_drwable_padding"
@@ -236,7 +236,7 @@
                 android:layout_height="wrap_content"
                 android:drawableRight="@drawable/job_icon"
                 android:textSize="@dimen/contact_us_text_us"
-
+                android:background="@null"
                 android:gravity="right"
                 android:hint="@string/hint_job_title"
                 android:textColor="@color/secb_dark_text"
@@ -253,7 +253,7 @@
                 android:layout_height="wrap_content"
                 android:drawableRight="@drawable/subject_icon"
                 android:textSize="@dimen/contact_us_text_us"
-
+                android:background="@null"
                 android:gravity="right"
                 android:hint="@string/hint_subject"
                 android:textColor="@color/secb_dark_text"
