--- a/SECB/app/src/main/res/layout-ar/news_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-ar/news_filter_screen.xml
@@ -60,11 +60,12 @@
                     android:visibility="gone" />
 
                 <!--from value-->
+
+                <!--android:drawableRight="@drawable/date_picker_icon"-->
                 <TextView
                     android:id="@+id/txtv_news_filter_time_from_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableRight="@drawable/date_picker_icon"
                     android:hint="@string/filter_time_from"
                     android:maxLines="1"
                     android:text=""
@@ -83,11 +84,11 @@
                     android:visibility="gone" />
 
                 <!--to value-->
+                <!--android:drawableRight="@drawable/date_picker_icon"-->
                 <TextView
                     android:id="@+id/txtv_news_filter_time_to_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableRight="@drawable/date_picker_icon"
                     android:hint="@string/filter_time_to"
                     android:maxLines="1"
                     android:text=""
@@ -212,6 +213,7 @@
         android:layout_width="fill_parent"
         android:layout_height="2.3dp"
         android:clickable="true"
+        android:visibility="gone"
         android:layout_above="@+id/filter_container"
         android:background="@drawable/shadow_h"></View>
 </RelativeLayout>
