--- a/SECB/app/src/main/res/layout-ar/organizer_item_card.xml
+++ b/SECB/app/src/main/res/layout-ar/organizer_item_card.xml
@@ -30,13 +30,14 @@
             android:textSize="@dimen/event_card_h1_text_size"
             android:textStyle="bold" />
 
+        <!--android:gravity="center_vertical"-->
         <TextView
             android:id="@+id/txtv_organizerDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:gravity="center_vertical"
+            android:gravity="top"
             android:maxLines="2"
             android:text="لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها.  لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها."
             android:textColor="@color/darkgrey_color"
@@ -46,11 +47,13 @@
     </LinearLayout>
 
 
+    <!--android:layout_width="0dp"-->
     <ImageView
         android:id="@+id/imgv_organizerImg"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/organizer_card_img_size"
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/event_card_margin"
+        android:layout_marginRight="@dimen/eguide_base_padding"
         android:layout_weight="1"
         android:src="@drawable/event_card_img" />
 
