--- a/SECB/app/src/main/res/layout/menu_layout.xml
+++ b/SECB/app/src/main/res/layout/menu_layout.xml
@@ -1,16 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/menu_bg"
-    android:paddingTop="@dimen/header_menu_icon_margin_start" >
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/menu_bg"
+                android:paddingTop="@dimen/header_menu_icon_margin_start">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="@dimen/menu_item_vertical_margin"
-        android:layout_marginBottom="@dimen/menu_item_vertical_margin"
         android:id="@+id/menuItemRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="@dimen/menu_item_vertical_margin"
+        android:layout_marginTop="@dimen/menu_item_vertical_margin"
         >
 
     </android.support.v7.widget.RecyclerView>
