--- a/SECB/app/src/main/res/layout/news_details.xml
+++ b/SECB/app/src/main/res/layout/news_details.xml
@@ -23,10 +23,9 @@
 
         <RelativeLayout
             android:id="@+id/layout_detailsContainer"
-            android:layout_width="@dimen/news_details_img_width"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
-            android:background="@color/white"
             android:orientation="vertical"
             android:padding="@dimen/news_details_padding"
             android:visibility="gone">
@@ -45,12 +44,13 @@
                 android:background="#dd122d53"
                 android:gravity="center_vertical">
 
+                <!--android:lines="2"-->
                 <TextView
                     android:id="@+id/txtv_news_details_newTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="2"
-                    android:lines="2"
+
                     android:ellipsize="end"
                     android:padding="@dimen/news_details_text_container_padding"
                     android:text=""
