--- a/SECB/app/src/main/res/layout/organizer_item_card.xml
+++ b/SECB/app/src/main/res/layout/organizer_item_card.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+    <!--android:layout_height="@dimen/item_card_height"-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_card_height"
@@ -9,12 +11,15 @@
     android:orientation="horizontal"
     android:weightSum="5">
 
+    <!--android:layout_width="0dp"-->
     <ImageView
         android:id="@+id/imgv_organizerImg"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/organizer_card_img_size"
         android:layout_height="match_parent"
         android:layout_marginRight="@dimen/event_card_margin"
+        android:layout_marginLeft="@dimen/eguide_base_padding"
         android:layout_weight="1"
+
         android:src="@drawable/event_card_img" />
 
     <LinearLayout
@@ -38,6 +43,8 @@
             android:textColor="@color/sceb_dark_blue"
             android:textSize="@dimen/event_card_h1_text_size" />
 
+
+        <!--android:gravity="center_vertical"-->
         <TextView
             android:id="@+id/txtv_organizerDescription"
             android:layout_width="match_parent"
@@ -45,7 +52,7 @@
             android:layout_weight="1"
             android:maxLines="2"
             android:ellipsize="end"
-            android:gravity="center_vertical"
+            android:gravity="top"
             android:text="Saudi Arabia has enhanced the development of exhibitions."
             android:textColor="@color/darkgrey_color"
             android:textSize="@dimen/event_card_h2_text_size" />
