--- a/SECB/app/src/main/res/values-large/dimens.xml
+++ b/SECB/app/src/main/res/values-large/dimens.xml
@@ -99,6 +99,7 @@
     <dimen name="organizer_p_info_rows_margin">16dp</dimen> <!-- 30PX - HEIGHT -->
     <dimen name="organizer_details_margin">19dp</dimen> <!-- 35PX - HEIGHT -->
     <dimen name="organizer_details_margin_small">11dp</dimen> <!-- 20PX - HEIGHT -->
+    <dimen name="organizer_card_img_size">74dp</dimen> <!-- 138PX - HEIGHT -->
 
     <dimen name="item_card_height">112dp</dimen> <!-- 210PX - HEIGHT -->
 
