--- a/SECB/app/src/main/res/values-mdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-mdpi/dimens.xml
@@ -100,6 +100,7 @@
     <dimen name="organizer_p_info_rows_margin">10dp</dimen> <!-- 30PX - HEIGHT -->
     <dimen name="organizer_details_margin">12dp</dimen> <!-- 35PX - HEIGHT -->
     <dimen name="organizer_details_margin_small">7dp</dimen> <!-- 20PX - HEIGHT -->
+    <dimen name="organizer_card_img_size">49dp</dimen> <!-- 138PX - HEIGHT -->
 
     <dimen name="item_card_height">74dp</dimen> <!-- 210PX - HEIGHT -->
 
