--- a/SECB/app/src/main/res/layout/album_list_fragment.xml
+++ b/SECB/app/src/main/res/layout/album_list_fragment.xml
@@ -16,7 +16,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/galleryRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
     </android.support.v7.widget.RecyclerView>
 
@@ -92,7 +93,7 @@
         android:layout_centerInParent="true"
         android:textColor="@color/secb_dark_text"
         android:textSize="@dimen/gallery_item_text_size"
-        android:visibility="gone"
+        android:visibility="visible"
         android:gravity="center"
         android:text="@string/loading"/>
 </RelativeLayout>
