--- a/SECB/app/src/main/res/layout/gallery_list_fragment.xml
+++ b/SECB/app/src/main/res/layout/gallery_list_fragment.xml
@@ -17,7 +17,30 @@
         android:id="@+id/galleryRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"></android.support.v7.widget.RecyclerView>
+        android:visibility="gone">
+
+    </android.support.v7.widget.RecyclerView>
+    <LinearLayout
+        android:id="@+id/layout_imagePlayerContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="#CC000000"
+        android:layout_marginTop="@dimen/home_graphs_card_padding"
+        android:layout_marginBottom="@dimen/home_graphs_card_padding"
+        android:layout_centerInParent="true"
+        android:clickable="true"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/imgv_imageAlbum"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/news_img_sample"
+            android:cropToPadding="true"/>
+    </LinearLayout>
     <TextView
         android:id="@+id/txtv_noData"
         android:layout_width="match_parent"
