--- a/SECB/app/src/main/res/layout-ar/locations_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-ar/locations_filter_screen.xml
@@ -55,6 +55,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:maxLines="1"
+                    android:hint="@string/hint_name"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
                     android:textSize="@dimen/news_filter_text_size"/>
@@ -124,7 +125,7 @@
         <!--types input-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/news_filter_screen_recycler_height"
             android:background="@color/white"
             android:orientation="vertical"
             android:padding="@dimen/news_filter_padding">
@@ -145,7 +146,7 @@
                 android:id="@+id/locationTypesRecyclerView"
                 android:visibility="gone"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/news_filter_screen_recycler_height">
+                android:layout_height="wrap_content">
 
             </android.support.v7.widget.RecyclerView>
             <CheckBox
@@ -247,6 +248,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:maxLines="1"
+                    android:hint="@string/filter_time_from"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
                     android:textSize="@dimen/news_filter_text_size"
@@ -282,6 +284,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:maxLines="1"
+                    android:hint="@string/filter_time_to"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
                     android:textSize="@dimen/news_filter_text_size"
@@ -312,6 +315,21 @@
             android:layout_marginTop="@dimen/news_filter_padding"
             android:background="@color/secb_orange"
             android:text="@string/filters_apply_filter"
+            android:textAllCaps="false"
+            android:textColor="@color/secb_light_text"
+            android:textSize="@dimen/news_filter_btn_text_size"/>
+
+
+        <!--Clear Filters button-->
+
+        <Button
+            android:id="@+id/btn_clearFilter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/news_filter_padding"
+            android:background="@color/secb_orange"
+            android:text="@string/filters_clear_filter"
+            android:textAllCaps="false"
             android:textColor="@color/secb_light_text"
             android:textSize="@dimen/news_filter_btn_text_size"/>
 
