--- a/SECB/app/src/main/res/layout/events_filter_screen.xml
+++ b/SECB/app/src/main/res/layout/events_filter_screen.xml
@@ -84,6 +84,7 @@
                 android:textSize="@dimen/news_filter_text_size" />
 
             <!--from value-->
+            <!--android:drawableLeft="@drawable/date_picker_icon"-->
             <TextView
                 android:id="@+id/txtv_news_filter_time_from_value"
                 android:layout_width="0dp"
@@ -92,8 +93,8 @@
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:text=""
-                android:drawableLeft="@drawable/date_picker_icon"
-                android:hint="@string/hint_date"
+
+                android:hint="@string/filter_time_from"
                 android:textColor="@color/secb_grey_text"
                 android:textSize="@dimen/news_filter_text_size" />
         </TableRow>
@@ -117,6 +118,7 @@
                 android:textSize="@dimen/news_filter_text_size" />
 
             <!--to value-->
+            <!--android:drawableLeft="@drawable/date_picker_icon"-->
             <TextView
                 android:id="@+id/txtv_news_filter_time_to_value"
                 android:layout_width="0dp"
@@ -124,8 +126,8 @@
                 android:layout_weight="1"
                 android:maxLines="1"
                 android:text=""
-                android:drawableLeft="@drawable/date_picker_icon"
-                android:hint="@string/hint_date"
+
+                android:hint="@string/filter_time_to"
                 android:textColor="@color/secb_grey_text"
                 android:textSize="@dimen/news_filter_text_size" />
         </TableRow>
@@ -145,7 +147,7 @@
         <!--types input-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/news_filter_screen_recycler_height"
             android:background="@color/white"
             android:orientation="vertical"
             android:padding="@dimen/news_filter_padding">
@@ -164,63 +166,12 @@
                 android:id="@+id/eventsCategoriesRecyclerView"
                 android:visibility="gone"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/news_filter_screen_recycler_height">
+                android:layout_height="wrap_content">
 
             </android.support.v7.widget.RecyclerView>
 
 
-            <RadioGroup
-                android:id="@+id/radgro_newsTypes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone">
 
-                <RadioButton
-                    android:id="@+id/radbtn_allTypes"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/news_filter_all_types"
-                    android:textColor="@color/secb_grey_text"
-                    android:layout_gravity="left"
-                    android:button="@null"
-                    android:textSize="@dimen/news_filter_text_size"
-                    android:drawableRight="@drawable/radio_btn"/>
-
-                <RadioButton
-                    android:id="@+id/radbtn_economicType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/news_filter_economic_type"
-                    android:textColor="@color/secb_grey_text"
-                    android:layout_gravity="left"
-                    android:button="@null"
-                    android:textSize="@dimen/news_filter_text_size"
-                    android:drawableRight="@drawable/radio_btn"/>
-
-                <RadioButton
-                    android:id="@+id/radbtn_politicalType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/news_filter_political_type"
-                    android:textColor="@color/secb_grey_text"
-                    android:layout_gravity="left"
-                    android:button="@null"
-                    android:textSize="@dimen/news_filter_text_size"
-                    android:drawableRight="@drawable/radio_btn" />
-                <!--android:buttonTint="@color/secb_dark_text"-->
-                <RadioButton
-                    android:id="@+id/radbtn_publicType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/news_filter_public_type"
-                    android:textColor="@color/secb_grey_text"
-                    android:layout_gravity="left"
-                    android:button="@null"
-                    android:textSize="@dimen/news_filter_text_size"
-                    android:drawableRight="@drawable/radio_btn"/>
-
-            </RadioGroup>
         </LinearLayout>
 
         <!--apply button-->
@@ -232,8 +183,24 @@
             android:layout_marginTop="@dimen/news_filter_padding"
             android:background="@color/secb_orange"
             android:text="@string/filters_apply_filter"
+            android:textAllCaps="false"
             android:textColor="@color/secb_light_text"
             android:textSize="@dimen/news_filter_btn_text_size" />
+
+
+        <!--Clear Filters button-->
+
+        <Button
+            android:id="@+id/btn_clearFilter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/news_filter_padding"
+            android:background="@color/secb_orange"
+            android:text="@string/filters_clear_filter"
+            android:textAllCaps="false"
+            android:textColor="@color/secb_light_text"
+            android:textSize="@dimen/news_filter_btn_text_size"/>
+
 
     </LinearLayout>
 </LinearLayout>
