--- a/SECB/app/src/main/res/layout/locations_filter_screen.xml
+++ b/SECB/app/src/main/res/layout/locations_filter_screen.xml
@@ -97,12 +97,14 @@
                 <Spinner
                     android:id="@+id/spn_city_filter_city_value"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
+                    android:hint="@string/hint_city"
+                    android:maxLines="1"
+                    android:background="@color/white"
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/news_filter_text_size"
-                    android:visibility="visible"/>
+                    android:textSize="@dimen/news_filter_text_size" />
             </TableRow>
 
 
@@ -123,7 +125,7 @@
         <!--types input-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/news_filter_screen_recycler_height"
             android:background="@color/white"
             android:orientation="vertical"
             android:padding="@dimen/news_filter_padding">
@@ -143,7 +145,7 @@
                 android:id="@+id/locationTypesRecyclerView"
                 android:visibility="gone"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/news_filter_screen_recycler_height">
+                android:layout_height="wrap_content">
 
             </android.support.v7.widget.RecyclerView>
 
@@ -294,6 +296,21 @@
             android:layout_marginTop="@dimen/news_filter_padding"
             android:background="@color/secb_orange"
             android:text="@string/filters_apply_filter"
+            android:textAllCaps="false"
+            android:textColor="@color/secb_light_text"
+            android:textSize="@dimen/news_filter_btn_text_size"/>
+
+
+        <!--Clear Filters button-->
+
+        <Button
+            android:id="@+id/btn_clearFilter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/news_filter_padding"
+            android:background="@color/secb_orange"
+            android:text="@string/filters_clear_filter"
+            android:textAllCaps="false"
             android:textColor="@color/secb_light_text"
             android:textSize="@dimen/news_filter_btn_text_size"/>
 
