--- a/SECB/app/src/main/res/layout/news_filter_screen.xml
+++ b/SECB/app/src/main/res/layout/news_filter_screen.xml
@@ -2,9 +2,9 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#aa000000">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#aa000000">
 
     <LinearLayout
         android:id="@+id/layout_dark_layer"
@@ -22,8 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:clickable="true"
         android:background="@drawable/filter_bg"
+        android:clickable="true"
         android:fillViewport="true">
 
         <LinearLayout
@@ -41,10 +41,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/filter_time"
+                android:textAllCaps="true"
                 android:textColor="@color/secb_light_text"
                 android:textSize="@dimen/news_filter_btn_text_size"
-                android:textAllCaps="true"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <!--time input-->
             <LinearLayout
@@ -61,7 +61,7 @@
                     android:text="@string/filter_time_from"
                     android:textColor="@color/secb_dark_text"
                     android:textSize="@dimen/news_filter_text_size"
-                    android:visibility="gone" />
+                    android:visibility="gone"/>
 
                 <!--from value-->
                 <!--android:drawableLeft="@drawable/date_picker_icon"-->
@@ -73,7 +73,7 @@
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/news_filter_text_size" />
+                    android:textSize="@dimen/news_filter_text_size"/>
 
                 <!--to-->
                 <TextView
@@ -84,7 +84,7 @@
                     android:text="@string/filter_time_to"
                     android:textColor="@color/secb_dark_text"
                     android:textSize="@dimen/news_filter_text_size"
-                    android:visibility="gone" />
+                    android:visibility="gone"/>
 
                 <!--to value-->
                 <!--android:drawableLeft="@drawable/date_picker_icon"-->
@@ -96,7 +96,7 @@
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/news_filter_text_size" />
+                    android:textSize="@dimen/news_filter_text_size"/>
 
 
             </LinearLayout>
@@ -108,10 +108,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/news_filter_padding"
                 android:text="@string/filter_type"
+                android:textAllCaps="true"
                 android:textColor="@color/secb_light_text"
                 android:textSize="@dimen/news_filter_btn_text_size"
-                android:textAllCaps="true"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <!--types input-->
             <LinearLayout
@@ -120,78 +120,27 @@
                 android:background="@color/white"
                 android:orientation="vertical"
                 android:padding="@dimen/news_filter_padding">
+
                 <TextView
                     android:id="@+id/txtv_noData"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/loading"
                     android:textColor="@color/secb_dark_text"
                     android:textSize="@dimen/gallery_item_text_size"
-                    android:visibility="visible"
-                    android:gravity="center"
-                    android:text="@string/loading"/>
+                    android:visibility="visible"/>
 
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/newsCategoriesRecyclerView"
-                    android:visibility="gone"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/news_filter_screen_recycler_height">
+                    android:layout_height="@dimen/news_filter_screen_recycler_height"
+                    android:visibility="gone">
 
                 </android.support.v7.widget.RecyclerView>
 
-                <RadioGroup
-                    android:id="@+id/radgro_newsTypes"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:visibility="gone">
-
-                    <RadioButton
-                        android:id="@+id/radbtn_allTypes"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="left"
-                        android:button="@null"
-                        android:drawableLeft="@drawable/radio_btn"
-                        android:text="@string/news_filter_all_types"
-                        android:textColor="@color/secb_grey_text"
-                        android:textSize="@dimen/news_filter_text_size" />
-
-                    <RadioButton
-                        android:id="@+id/radbtn_economicType"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="left"
-                        android:button="@null"
-                        android:drawableLeft="@drawable/radio_btn"
-                        android:text="@string/news_filter_economic_type"
-                        android:textColor="@color/secb_grey_text"
-                        android:textSize="@dimen/news_filter_text_size" />
-
-                    <RadioButton
-                        android:id="@+id/radbtn_politicalType"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="left"
-                        android:button="@null"
-                        android:drawableLeft="@drawable/radio_btn"
-                        android:text="@string/news_filter_political_type"
-                        android:textColor="@color/secb_grey_text"
-                        android:textSize="@dimen/news_filter_text_size" />
-                    <!--android:buttonTint="@color/secb_dark_text"-->
-                    <RadioButton
-                        android:id="@+id/radbtn_publicType"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="left"
-                        android:button="@null"
-                        android:drawableLeft="@drawable/radio_btn"
-                        android:text="@string/news_filter_public_type"
-                        android:textColor="@color/secb_grey_text"
-                        android:textSize="@dimen/news_filter_text_size" />
-
-                </RadioGroup>
             </LinearLayout>
 
             <!--apply button-->
@@ -203,8 +152,23 @@
                 android:layout_marginTop="@dimen/news_filter_padding"
                 android:background="@color/secb_orange"
                 android:text="@string/filters_apply_filter"
+                android:textAllCaps="false"
                 android:textColor="@color/secb_light_text"
-                android:textSize="@dimen/news_filter_btn_text_size" />
+                android:textSize="@dimen/news_filter_btn_text_size"/>
+
+
+            <!--Clear Filters button-->
+
+            <Button
+                android:id="@+id/btn_clearFilter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/news_filter_padding"
+                android:background="@color/secb_orange"
+                android:text="@string/filters_clear_filter"
+                android:textAllCaps="false"
+                android:textColor="@color/secb_light_text"
+                android:textSize="@dimen/news_filter_btn_text_size"/>
 
 
         </LinearLayout>
@@ -215,8 +179,8 @@
         android:id="@+id/shadow"
         android:layout_width="fill_parent"
         android:layout_height="2.3dp"
-        android:clickable="true"
-        android:visibility="gone"
         android:layout_above="@+id/filter_container"
-        android:background="@drawable/shadow_h"></View>
+        android:background="@drawable/shadow_h"
+        android:clickable="true"
+        android:visibility="gone"></View>
 </RelativeLayout>
