--- a/SECB/app/src/main/res/layout-ar/header.xml
+++ b/SECB/app/src/main/res/layout-ar/header.xml
@@ -57,6 +57,17 @@
             android:src="@drawable/header_back_button_ar"
             android:visibility="visible" />
 
+        <com.addthis.ui.views.ATButton
+            android:id="@+id/addthisShareButton"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:paddingBottom="@dimen/header_menu_icon_margin_start"
+            android:paddingLeft="@dimen/header_menu_icon_margin_start"
+            android:paddingRight="@dimen/header_menu_icon_margin_end"
+            android:paddingTop="@dimen/header_menu_icon_margin_start"/>
+        <!--
         <ImageView
             android:id="@+id/imageViewShareHeader"
             android:layout_width="wrap_content"
@@ -69,5 +80,6 @@
             android:paddingTop="@dimen/header_menu_icon_margin_start"
             android:src="@drawable/share_icon"
             android:visibility="visible" />
+            -->
     </RelativeLayout>
 </LinearLayout>
