Link feedback - Placeholders - Login finish - E-service color, date, status

--- a/SECB/app/src/main/res/layout-ar/news_item_card.xml
+++ b/SECB/app/src/main/res/layout-ar/news_item_card.xml
@@ -69,6 +69,7 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/event_card_margin"
         android:layout_weight="1"
-        android:src="@drawable/news_image_place_holder" />
+        android:src="@drawable/news_placeholder"
+        android:scaleType="centerCrop"/>
 
 </LinearLayout>
