--- a/SECB/app/src/main/res/layout/news_item_card.xml
+++ b/SECB/app/src/main/res/layout/news_item_card.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/event_card_margin"
         android:layout_weight="1"
-        android:src="@drawable/news_image_place_holder" />
+        android:src="@drawable/news_placeholder"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="0dp"
