--- a/SECB/app/src/main/res/layout-ar/organizer_item_card.xml
+++ b/SECB/app/src/main/res/layout-ar/organizer_item_card.xml
@@ -52,9 +52,10 @@
         android:id="@+id/imgv_organizerImg"
         android:layout_width="@dimen/organizer_card_img_size"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/event_card_margin"
+        android:layout_marginLeft="@dimen/eguide_base_padding"
         android:layout_marginRight="@dimen/eguide_base_padding"
         android:layout_weight="1"
+        android:scaleType="centerCrop"
         android:src="@drawable/event_card_img" />
 
 </LinearLayout>
