--- a/SECB/app/src/main/res/layout/organizer_item_card.xml
+++ b/SECB/app/src/main/res/layout/organizer_item_card.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <!--android:layout_height="@dimen/item_card_height"-->
+<!--android:layout_height="@dimen/item_card_height"-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_card_height"
     android:layout_marginBottom="@dimen/eguide_base_padding"
     android:layout_marginTop="@dimen/eguide_base_padding"
-    android:padding="@dimen/eguide_base_padding"
     android:background="@color/off_white"
     android:orientation="horizontal"
+    android:padding="@dimen/eguide_base_padding"
     android:weightSum="5">
 
     <!--android:layout_width="0dp"-->
@@ -16,10 +16,10 @@
         android:id="@+id/imgv_organizerImg"
         android:layout_width="@dimen/organizer_card_img_size"
         android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/event_card_margin"
         android:layout_marginLeft="@dimen/eguide_base_padding"
+        android:layout_marginRight="@dimen/eguide_base_padding"
         android:layout_weight="1"
-
+        android:scaleType="centerCrop"
         android:src="@drawable/event_card_img" />
 
     <LinearLayout
@@ -35,13 +35,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:maxLines="1"
-            android:gravity="bottom"
-            android:textStyle="bold"
             android:ellipsize="end"
+            android:gravity="bottom"
+            android:maxLines="1"
             android:text="Saudi Arabia has enhanced the development of exhibitions."
             android:textColor="@color/sceb_dark_blue"
-            android:textSize="@dimen/event_card_h1_text_size" />
+            android:textSize="@dimen/event_card_h1_text_size"
+            android:textStyle="bold" />
 
 
         <!--android:gravity="center_vertical"-->
@@ -50,9 +50,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:maxLines="2"
             android:ellipsize="end"
             android:gravity="top"
+            android:maxLines="2"
             android:text="Saudi Arabia has enhanced the development of exhibitions."
             android:textColor="@color/darkgrey_color"
             android:textSize="@dimen/event_card_h2_text_size" />
