--- a/SECB/app/src/main/res/layout/gallery_list_fragment.xml
+++ b/SECB/app/src/main/res/layout/gallery_list_fragment.xml
@@ -27,8 +27,8 @@
         android:orientation="vertical"
         android:gravity="center"
         android:background="#CC000000"
-        android:layout_marginTop="@dimen/home_graphs_card_padding"
-        android:layout_marginBottom="@dimen/home_graphs_card_padding"
+        android:paddingTop="@dimen/home_graphs_card_padding"
+        android:paddingBottom="@dimen/home_graphs_card_padding"
         android:layout_centerInParent="true"
         android:clickable="true"
         android:visibility="gone">
