--- a/SECB/app/src/main/res/layout/youtube_player_activity.xml
+++ b/SECB/app/src/main/res/layout/youtube_player_activity.xml
@@ -16,5 +16,6 @@
         android:id="@+id/youtube_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:background="@color/black"/>
 </LinearLayout>
