--- a/SECB/app/src/main/res/layout/email_input.xml
+++ b/SECB/app/src/main/res/layout/email_input.xml
@@ -4,13 +4,13 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imgv_emailIcon"
+        android:id="@+id/imgv_userNameIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/email_icon"
+        android:src="@drawable/user_icon"
         android:visibility="visible" />
 
     <EditText
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/login_input_text_margin_left"
-        android:layout_toRightOf="@+id/imgv_emailIcon"
+        android:layout_toRightOf="@+id/imgv_userNameIcon"
         android:background="@color/white"
         android:hint="@string/username"
         android:padding="@dimen/login_input_text_pad"
