--- a/SECB/app/src/main/res/layout/login.xml
+++ b/SECB/app/src/main/res/layout/login.xml
@@ -1,81 +1,85 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/bg"
-    android:paddingLeft="@dimen/login_page_horizontal_pad"
-    android:paddingRight="@dimen/login_page_horizontal_pad"
-    android:gravity="center"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/bg"
+              android:gravity="center"
+              android:orientation="vertical"
+              android:paddingLeft="@dimen/login_page_horizontal_pad"
+              android:paddingRight="@dimen/login_page_horizontal_pad"
     >
-<LinearLayout
 
-    android:layout_width="@dimen/login_container_width"
-    android:layout_gravity="center"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <!--logo-->
-    <ImageView
-        android:layout_width="@dimen/login_logo_img_width"
-        android:layout_height="@dimen/login_logo_img_height"
-        android:src="@drawable/login_logo"
-        android:scaleType="centerCrop"
-        android:visibility="visible"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="@dimen/login_logo_margin_bottom"/>
-
-    <!--input fields-->
-    <!-- @dimen/login_input_container_height-->
-    <!--
-        android:paddingTop="@dimen/login_input_container_vertical_pad"
-        android:paddingBottom="@dimen/login_input_container_vertical_pad"
-        -->
     <LinearLayout
-        android:layout_width="match_parent"
+
+        android:layout_width="@dimen/login_container_width"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:paddingLeft="@dimen/login_input_container_pad_left"
-        android:paddingRight="@dimen/login_input_container_pad_right"
+        android:layout_gravity="center"
         android:orientation="vertical">
-        <!-- email-->
-        <!-- email-->
-        <include layout="@layout/email_input"/>
-        <!--password-->
-        <include layout="@layout/password_input"/>
+
+        <!--logo-->
+        <ImageView
+            android:layout_width="@dimen/login_logo_img_width"
+            android:layout_height="@dimen/login_logo_img_height"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/login_logo_margin_bottom"
+            android:scaleType="centerCrop"
+            android:src="@drawable/login_logo"
+            android:visibility="visible"/>
+
+        <!--input fields-->
+        <!-- @dimen/login_input_container_height-->
+        <!--
+            android:paddingTop="@dimen/login_input_container_vertical_pad"
+            android:paddingBottom="@dimen/login_input_container_vertical_pad"
+            -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/login_input_container_pad_left"
+            android:paddingRight="@dimen/login_input_container_pad_right">
+            <!-- email-->
+            <!-- email-->
+            <include layout="@layout/email_input"/>
+            <!--password-->
+            <include layout="@layout/password_input"/>
+        </LinearLayout>
+
+        <!--forget loginXml-->
+        <TextView
+            android:id="@+id/txtv_forgetPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/login_forget_pass_vertical_margin"
+            android:layout_marginTop="@dimen/login_forget_pass_vertical_margin"
+            android:gravity="end"
+            android:text="@string/login_forget_pass"
+            android:textColor="@color/secb_light_text"
+            android:textSize="@dimen/login_forget_pass_text_size"/>
+
+        <!--login button-->
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/login_button_height"
+            android:background="@color/secb_orange"
+            android:text="@string/login_login"
+            android:textAllCaps="false"
+            android:textColor="@color/secb_dark_text"
+            android:textSize="@dimen/login_button_text_size"/>
+
+        <!--sign up button-->
+        <!--android:background="@color/secb_grey"-->
+        <Button
+            android:id="@+id/btn_signUp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/login_button_height"
+            android:layout_marginTop="@dimen/login_button_signup_margin_top"
+            android:background="@drawable/signuo_btn_bg"
+            android:text="@string/login_signup"
+            android:textAllCaps="false"
+            android:textColor="@color/secb_light_text"
+            android:textSize="@dimen/login_button_text_size"/>
     </LinearLayout>
-
-    <!--forget loginXml-->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        android:text="@string/login_forget_pass"
-        android:textColor="@color/secb_light_text"
-        android:textSize="@dimen/login_forget_pass_text_size"
-        android:layout_marginTop="@dimen/login_forget_pass_vertical_margin"
-        android:layout_marginBottom="@dimen/login_forget_pass_vertical_margin"
-        android:id="@+id/txtv_forgetPassword" />
-
-    <!--login button-->
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/login_button_height"
-        android:text="@string/login_login"
-        android:textSize="@dimen/login_button_text_size"
-        android:textColor="@color/secb_dark_text"
-        android:background="@color/secb_orange"
-        android:id="@+id/btn_login" />
-
-    <!--sign up button-->
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/login_button_height"
-        android:layout_marginTop="@dimen/login_button_signup_margin_top"
-        android:text="@string/login_signup"
-        android:textSize="@dimen/login_button_text_size"
-        android:textColor="@color/secb_light_text"
-        android:background="@color/secb_grey"
-        android:id="@+id/btn_signUp" />
-</LinearLayout>
 </LinearLayout>
